fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -18,14 +18,13 @@ html {
   font-size: 16px;
 }
 
+.overflow {
+  overflow: hidden;
+}
+
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
-  -webkit-transition: background-color 500ms linear;
-  -moz-transition: background-color 500ms linear;
-  -o-transition: background-color 500ms linear;
-  -ms-transition: background-color 500ms linear;
-  transition: background-color 500ms linear;
 }
 
 :root {
@@ -347,6 +346,7 @@ body {
   font-size: 5rem;
   letter-spacing: -0.04em;
   line-height: 100%;
+  width: 70%;
 }
 
 .service-paragraph {
@@ -843,6 +843,7 @@ a:hover::after {
     font-size: 3.5rem;
     letter-spacing: -0.04em;
     line-height: 100%;
+    width: 100%;
   }
   .client-item {
     padding: 2rem;
